Update HotSwapEngine.java